--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@clerk/nextjs": "^6.14.3",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tanstack/react-query": "^5.74.3",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -24,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
