--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.3",
+    "@langchain/community": "^0.3.40",
     "@neondatabase/serverless": "^1.0.0",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.3",
+    "@types/md5": "^2.3.5",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -20,8 +24,12 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.30.6",
     "drizzle-orm": "^0.41.0",
+    "langchain": "^0.3.21",
     "lucide-react": "^0.487.0",
+    "md5": "^2.3.0",
     "next": "15.3.0",
+    "openai-edge": "^1.2.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
