--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.2.8",
+    "@ai-sdk/openai": "^1.3.16",
     "@clerk/nextjs": "^6.14.3",
-    "@langchain/community": "^0.3.40",
+    "@google/generative-ai": "^0.24.0",
+    "@langchain/community": "^0.3.41",
     "@neondatabase/serverless": "^1.0.0",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.3",
     "@types/md5": "^2.3.5",
+    "ai": "^4.3.9",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
